--- a/database_engineering.ipynb
+++ b/database_engineering.ipynb
@@ -2,25 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "'rm' is not recognized as an internal or external command,\n",
-      "operable program or batch file.\n"
-     ]
-    }
-   ],
-   "source": [
-    "!rm hawaii.sqlite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -35,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
@@ -95,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +216,7 @@
        "4  0.040086    73      1    6  2010  2010-01-06  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -289,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -332,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +377,7 @@
        "  'year': 2010}]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -418,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -429,16 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x2034e779ef0>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x2034d021080>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,16 +431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x20348e45588>"
+       "<sqlalchemy.engine.result.ResultProxy at 0x2034e910fd0>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +460,7 @@
        "[(1.06,)]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +487,7 @@
        " (16939, 'USC00516128', 'MANOA LYON ARBO 785.2, HI US', 21.3331, -157.8025, 152.4, 0.14, 73, 1, 1, 2010, '2010-01-01 00:00:00.000000')]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +507,7 @@
        "1.06"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
